# StockBuddy

./: .gitignore  PRODUCT_ROADMAP.md  ai_explainer.py  config.py  docker-compose.yml  main.py  market_data.py  models.py  portfolio_analyzer.py  requirements.txt  stock_chart.py
apps/api/: .env.example  Dockerfile  pyproject.toml  railway.toml  worker.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_datetime_timezone.py  003_add_subscription.py  004_add_watchlist_and_holding_prev_close.py  005_add_price_alerts_and_holding_earnings_date.py  006_add_holding_purchased_at_cost_basis.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/routers/: alerts.py  analysis.py  billing.py  earnings.py  holdings.py  (+3 more)
apps/api/app/core/: auth.py  exceptions.py  logging.py  rate_limiter.py
apps/api/app/models/: __init__.py  analysis_job.py  earnings.py  holding.py  portfolio.py  price_alert.py  snapshot.py  subscription.py  watchlist.py
apps/api/app/schemas/: __init__.py  analysis.py  earnings.py  holding.py  portfolio.py  price_alert.py  stock.py  subscription.py  watchlist.py
apps/api/app/services/: ai_analysis.py  forecast.py  market_data.py  news.py  portfolio.py  price_alerts.py  reddit.py  search.py  sentiment_parser.py  stock_data.py  subscription.py  technical_analysis.py  transcript.py  watchlist.py
apps/api/app/workers/: __init__.py
apps/api/tests/: conftest.py  test_analysis.py  test_auth.py  test_billing.py  test_earnings.py  test_holdings.py  test_portfolios.py  test_stocks.py
(+76 files in other folders)
